infra/k8s/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
